@@ -81,8 +81,8 @@ libcull.a:  $(CULLLIB_OBJS)
 	$(AR) $(ARFLAGS) libcull.a $(CULLLIB_OBJS)
 	$(RANLIB) libcull.a 
 
-libcull$(SHAREDEXT): $(CULLLIB_OBJS) $(UTILIB)
-	$(SHAREDLD) $(SHARED_LFLAGS) -o libcull$(SHAREDEXT) $(CULLLIB_OBJS) -luti $(LIBS) -lc
+libcull$(SHAREDEXT): $(CULLLIB_OBJS) $(UTILIB) $(RMONLIB)
+	$(SHAREDLD) $(SHARED_LFLAGS) -o libcull$(SHAREDEXT) $(CULLLIB_OBJS) -luti -lrmon $(LIBS) -lc
 
 ###############################################################################
 # include dependencies for object files generated by sge_depend
